# pfi

./: MANIFEST.in  README.md  apps.txt  pyproject.toml  requirements.txt
pfi/: __init__.py  hooks.py  patches.txt  service.py
pfi/custom_scripts/: bom_service_check.py  cutting_matrix.py  job_card_batch.py  work_order_custom.py  work_order_validate.py
pfi/doctype/cutting_matrix_table/: cutting_matrix_table.js  cutting_matrix_table.json  cutting_matrix_table.py
pfi/doctype/planned_quantity_table/: planned_quantity_table.json
pfi/doctype/size_table/: size_table.js  size_table.json  size_table.py
pfi/fixtures/: custom_field.json  custom_fields.json  custom_print_format.json  custom_report.json  print_format.json  property_setter.json
pfi/patches/v1_0_0/: add_custom_field_to_bom.py  set_naming_defaults.py  set_work_order_naming_series.py
pfi/pfi/doctype/batch_allocation/: batch_allocation.json  batch_allocation.py
pfi/pfi/doctype/cutting_matrix_table/: cutting_matrix_table.json  cutting_matrix_table.py
pfi/pfi/doctype/planned_quantity_table/: planned_quantity_table.json  planned_quantity_table.py
pfi/pfi/doctype/work_order/: work_order.js  work_order.json
pfi/print_format/job_card_a8/: job_card_a8.html
pfi/print_formats/job_card_a8/: job_card_a8.css  job_card_a8.html
pfi/public/: build.json
pfi/public/css/: work_order.css
pfi/public/js/: batch_allocation_autofill.js  bom.js  work_order.js
pfi/scripts/: __init__.py  job_cards.py  override.py  uninstall.py
