[project]
name = "pfi"
authors = [
    { name="PFI Team", email="your@email.com" }

]
description = "PFI Custom App for ERPNext"
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["version"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
